--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
         Titolo
     </h1>
 
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere nesciunt saepe accusantium sequi ipsam nemo quia doloribus, reprehenderit, culpa tempora voluptatibus nostrum alias modi perferendis ratione est. Ea, eos saepe.
+    </p>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="./js/script.js"></script>
 </body>
